feat: setup keycloak and configuration spring security

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,9 @@
-spring.application.name=todo
+spring:
+  application:
+    name: todo
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8180/realms/identity
