--- a/.github/workflows/github-ci-cd.yml
+++ b/.github/workflows/github-ci-cd.yml
@@ -30,3 +30,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
+    - user: mr-smithers-excellent/docker-build-push@v6
+      name: Build & push Docker image
+      with:
+        image: ${{ secrets.DOCKER_NAME}}/todoapp
+        tags: latest
+        registry: docker.io
+        dockerfile: deployment/Dockerfile.io
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
