--- a/.github/workflows/github-ci-cd.yml
+++ b/.github/workflows/github-ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - user: mr-smithers-excellent/docker-build-push@v6
+    - uses: mr-smithers-excellent/docker-build-push@v6
       name: Build & push Docker image
       with:
         image: ${{ secrets.DOCKER_NAME}}/todoapp
